_sass/custom/custom.scss
html {
  direction: rtl;
}

body {
  direction: rtl;
  text-align: right;
}

.site-title,
.site-header,
.navigation,
.main-content,
.table-wrapper,
.search-input,
.breadcrumb-nav,
.page-header,
.page-footer {
  direction: rtl;
}

.main-content ol,
.main-content ul {
  padding-right: 1.5rem;
  padding-left: 0;
}

.main-content table {
  direction: rtl;
}

.main-content pre,
.main-content code,
.main-content kbd,
.main-content samp,
.main-content .highlight,
.main-content .language-plaintext,
.main-content td code,
.main-content th code {
  direction: ltr;
  unicode-bidi: isolate;
  text-align: left;
}

.main-content pre code {
  display: block;
  overflow-x: auto;
}

.main-content a code {
  unicode-bidi: isolate;
}

@media (min-width: 50rem) {
  .side-bar {
    right: 0;
    left: auto;
    border-right: 0;
    border-left: 1px solid #eeebee;
  }

  .side-bar + .main {
    margin-right: 15.5rem;
    margin-left: 0;
  }

  .site-footer {
    right: 0;
    left: auto;
  }
}

@media (min-width: 66.5rem) {
  .side-bar + .main {
    margin-right: Max(16.5rem, calc((100% - 66.5rem) / 2 + 16.5rem));
    margin-left: 0;
  }
}

@media (max-width: 50rem) {
  .main-content {
    line-height: 1.75;
  }
}

